--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.16"
   },
   "scripts": {
-     "start": "nodemon app.js",
-     "comment":"part #1 point #1",
+    "start": "nodemon app.js",
+    "comment": "part #1 point #1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "aiswarya",
